--- a/package.json
+++ b/package.json
@@ -27,5 +27,5 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "vite": "^5.3.1"
   },
-  "homepage": "https://Mmeso1.github.io/Timbu-Cloud-shop"
+  "homepage": "https://Mmeso1.github.io/Timbu-Cloud-shop/"
 }
