--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "animate.css": "^4.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.24.1",
+    "swiper": "^11.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
