--- a/package.json
+++ b/package.json
@@ -30,5 +30,5 @@
     "gh-pages": "^6.3.0",
     "vite": "^5.3.1"
   },
-  "homepage": "https://Mmeso1.github.io/Timbu-Cloud-shop/"
+  "homepage": "https://mmeso1.github.io/Timbu-Cloud-shop/"
 }
